# flash-attn-composable-kernel-gfx110x-windows-port

./: .gitignore  .gitmodules  README.md
bridge/: CMakeLists.txt  m.h  main.cpp
brigde/: CMakeLists.txt  main.cpp
ck_fattn_ker/: CMakeLists.txt  ck.patch
ck_fattn_ker/pytorch_rocm_header/include/ATen/hip/: HIPBlas.h  HIPContextLight.h  HIPGraph.h  HIPSparseDescriptors.h
ck_fattn_ker/pytorch_rocm_header/include/ATen/hip/detail/: IndexUtils.cuh
ck_fattn_ker/pytorch_rocm_header/include/ATen/native/hip/: MultiTensorApply.cuh  Reduce.cuh
ck_fattn_ker/pytorch_rocm_header/include/c10/hip/: HIPMacros.h  driver_api.h
ck_fattn_ker/pytorch_rocm_header/include/torch/csrc/cuda/: CUDAPluggableAllocator.h
ck_fattn_ker/pytorch_rocm_header/include/torch/csrc/distributed/c10d/: NCCLUtils.hpp
ck_fattn_ker/pytorch_rocm_header/include/torch/csrc/inductor/aoti_runtime/: model.h
ck_fattn_ker/pytorch_rocm_header/include/torch/csrc/inductor/aoti_torch/c/: shim.h
ck_fattn_ker/src/: flash_fwd_runner_batched_gqa_bf16_casual_gfx110x.hip  flash_fwd_runner_batched_gqa_bf16_noncasual_gfx110x.hip  flash_fwd_runner_batched_gqa_fp16_casual_gfx110x.hip  flash_fwd_runner_batched_gqa_fp16_noncasual_gfx110x.hip  flash_fwd_runner_batched_mqa_bf16_casual_gfx110x.hip  flash_fwd_runner_batched_mqa_bf16_noncasual_gfx110x.hip  flash_fwd_runner_batched_mqa_fp16_casual_gfx110x.hip  flash_fwd_runner_batched_mqa_fp16_noncasual_gfx110x.hip  flash_runner.hip  flash_runner.hpp  params.hpp
ck_fattn_ker/src/gfx9x_disable/: flash_bwd_runner_grouped_hdim32_bf16_causal_gfx9x.cpp
include/pytorch_rocm_header/include/ATen/hip/: Exceptions.h  HIPSparse.h
include/pytorch_rocm_header/include/ATen/native/hip/: HIPLoops.cuh  Loops.cuh  MemoryAccess.cuh  PersistentSoftmax.cuh  SortingCommon.cuh  SortingRadixSelect.cuh
include/pytorch_rocm_header/include/c10/hip/: HIPAllocatorConfig.h  HIPCachingAllocator.h  HIPStream.h
include/pytorch_rocm_header/include/torch/csrc/: CudaIPCTypes.h
include/pytorch_rocm_header/include/torch/csrc/cuda/: nccl.h
include/pytorch_rocm_header/include/torch/csrc/distributed/c10d/: ProcessGroupNCCL.hpp
include/pytorch_rocm_header/include/torch/csrc/inductor/aoti_runtime/: model_container.h
include/pytorch_rocm_header/include/torch/csrc/jit/python/: pybind_utils.h
